# nsr-engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: accuracy_layers.md  cli_reference.md  methodology.md  pipeline_examples.md  quickstart.md  releasing.md
examples/: accuracy_layers.py  cached_run.py  csv_input.py  custom_metric_library.py  full_pipeline.py  generated_train_test.py  generated_validation.py  memmap_out_of_core.py  pipeline_common.py
src/nsr_engine/: __init__.py  _expr.py  _logging.py  base.py  boosting.py  engine.py  main.py  memmap_store.py  pareto.py  pipeline.py  refinement.py
tests/: test_accuracy_layers.py  test_smoke.py
