[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsr-engine"
version = "0.1.0"
description = "Neural Symbolic Regression engine: GRU policy + REINFORCE + lambda-sweep Pareto front"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kpapmath", email = "kpapmath@gmail.com" }]
keywords = ["symbolic regression", "neural network", "pareto", "reinforcement learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "torch>=2.0",
]

[project.optional-dependencies]
sympy = ["sympy>=1.12"]
memmap = ["pyarrow>=14.0"]
dev = [
  "pytest>=8.0",
  "sympy>=1.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
