[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsr-engine"
dynamic = ["version"]
description = "Neural Symbolic Regression engine: GRU policy + REINFORCE + lambda-sweep Pareto front"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kpapmath", email = "kpapmath@gmail.com" }]
keywords = ["symbolic regression", "neural network", "pareto", "reinforcement learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "torch>=2.0",
]

[project.scripts]
nsr-engine = "nsr_engine.main:main"

[project.optional-dependencies]
sympy = ["sympy>=1.12"]
memmap = ["pyarrow>=14.0"]
dev = [
  "pytest>=8.0",
  "sympy>=1.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "nsr_engine.__version__" }
